# Backgrounder

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
app/: cli.py  config.py  main.py  models.py
app/llm/: nvidia.py
app/pipeline/: aggregator.py
app/providers/: base.py  factory.py  playwright_scraper.py  proxycurl.py  rapidapi.py  serpapi.py
app/routes/: background_check.py
app/sources/: company_verify.py  github.py  google_search.py  photo_search.py  reference_discovery.py  resume.py  social_media.py
app/utils/: http.py
static/: index.html  script.js  style.css
